welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:4: error: '=' expected but ';' found.
  for (k<-1 to n-1){
^